--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
 
   --primary-color: #635fc7;
   --primary-bg-color: #f4f7fd;
+  --primary-edit-color: #356eea;
+  --primary-delete-color: #fb2727;
 }
 
 .App {
@@ -17,7 +25,7 @@ button {
 
 .sidebar {
   min-height: 70svh;
-  width: 20%;
+  width: 22rem;
   background-color: #fff;
 }
 
@@ -45,6 +53,17 @@ button {
 
 .board-controller>svg:last-child {
   color: rgb(255, 86, 86);
+}
+
+.skeleton-board-option {
+  padding-left: 10% !important;
+  width: 80%;
+  border-radius: 0px 30px 30px 0px !important;
+}
+
+.error-board-option {
+  margin: 20px 0px 0px -20px !important;
+  width: 100%;
 }
 
 .board-option {
@@ -84,7 +103,7 @@ button {
 }
 
 .edit-board-input {
-  margin: 0px 0px 0px 5px !important;
+  margin: 0px !important;
 }
 
 .edit-board-input>input {
@@ -108,8 +127,8 @@ button {
 }
 
 .tasks {
-  min-height: 93svh;
-  min-width: 80%;
+  min-height: 90svh;
+  width: 100%;
   background-color: var(--primary-bg-color);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -160,11 +179,16 @@ button {
 .subtask {
   display: flex;
   gap: 10px;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   padding: 5px 10px;
   background-color: var(--primary-bg-color);
   border-radius: 5px;
+}
+
+.subtask>svg {
+  margin-left: auto;
+  color: var(--primary-edit-color);
 }
 
 .subtask>input {
@@ -184,6 +208,10 @@ button {
   padding-bottom: 25px;
 }
 
+.edit-subtask svg {
+  cursor: pointer;
+}
+
 .edit-subtask>header {
   display: flex;
   justify-content: space-between;
@@ -194,9 +222,12 @@ button {
   font-size: 25px;
 }
 
-.edit-subtask>header>svg {
-  cursor: pointer;
-  color: rgb(251, 39, 39);
+.edit-subtask>header svg:first-child {
+  color: var(--primary-edit-color);
+}
+
+.edit-subtask>header svg:last-child {
+  color: var(--primary-delete-color);
 }
 
 .edit-subtask>header+div {
@@ -205,7 +236,8 @@ button {
   gap: 20px;
 }
 
-.edit-subtask>header+div>p:first-child {
+/* Task Description */
+.edit-subtask>header+div>div>p:first-child {
   font-weight: 600;
   color: #7b7b7b;
 }
